# words_extractor

./: .gitignore  LICENSE  README.md
data/en/american-standard-version/: asv.yml
data/pl/biblia-brzeska/: bb.txt  bb.yml
data/pl/biblia-gdanska/: bg.yml
data/pl/biblia-lubelska/: lub.txt  lub.yml
data/pl/biblia-wujka/: wuj.txt  wuj.yml
data/pl/hebrajska-tora-secha-pecaric/: pec.txt  pec.yml
data/pl/tora-kusmirek/: kus.txt  kus.yaml
data/pl/uwspolczesniona-biblia-gdanska/: ubg.yml
data/ru/: rst.yml
example-crystal/: LICENSE  README.md  main  shard.yml
example-crystal/spec/: example-crystal_spec.cr  spec_helper.cr
example-crystal/src/: example-crystal.cr
example-elixir/: .gitignore  README.md  mix.exs
example-elixir/lib/: words_extractor.ex
example-elixir/test/: words_extractor_test.exs
example-golang/: Makefile  README.md  app_test.go  go.mod  go.sum  main  main.go  yaml.go
example-golang/app/: app.go  extract.go  spec.go
example-julia/: Project.toml  README.md
example-julia/src/: words.jl
example-python/: .tool-versions  README.md  pyproject.toml  requirements.txt  words.py
example-ruby/: .tool-versions  Gemfile  README.md  words.rb
example-rust/: .gitignore  Cargo.toml  README.md
example-rust/src/: main.rs
words_extractor_cr/: .gitignore  LICENSE  README.md  shard.yml
words_extractor_cr/spec/: fast_words_cr_spec.cr  spec_helper.cr
words_extractor_cr/src/: fast_words_cr.cr
words_extractor_ex/: .gitignore  mix.exs
words_extractor_ex/lib/: words_extractor.ex
words_extractor_go/: .gitignore  Makefile  content.go  go.mod  go.sum  main.go  main_test.go  meta.go  pretty_print.go  utils.go  utils_test.go
words_extractor_jl/: .gitignore  Manifest.toml  Project.toml
words_extractor_jl/src/: words_extractor_jl.jl
words_extractor_py/: .gitignore  requirements.txt  words.py  words_parallel.py  words_parallel2.py
words_extractor_rs/: .gitignore  Cargo.toml
words_extractor_rs/src/: main.rs
