[package]
name = "words_extractor_rs"
version = "0.2.0"
authors = ["Jaroslaw Zabiello <hipertracker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
futures = "0.3.19"
glob = "0.3.0"
itertools = "0.10.3"
lexical-sort = "0.3.1"
num_cpus = "1.0"
once_cell = "1.9.0"
regex = "1.5.4"
tokio = { version = "1.16.1", features = ["full"] }
yaml-rust = "0.4.5"

[profile.release]
debug = 1
