[package]
name = "words_extractor_rs"
version = "0.1.0"
authors = ["Jaroslaw Zabiello <hipertracker@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collate = "0.1.10"
crossbeam-utils = "0.8.4"
glob = "0.3.0"
lexical-sort = "0.3.1"
num_cpus = "1.0"
regex = "1.5.4"
yaml-rust = "0.4.5"